ADD re-submit job feature (#494)
* ADD re-submit job feature